--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
   
   <div class="row">
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./01_intro/starrynight.jpg" alt = "Cat"> </image>
+      <image style = "width: 75%"src = "./01_intro/starrynight.jpg" alt = "Van Gogh's Starry Night"> </image>
       <br>[Week 1: Intro](./01_intro/index.html)
     </div>
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./02_2Ddesign/week2-placeholder-image.jpg" alt = "week 2 placeholder"> </image>
+      <image style = "width: 75%"src = "./02_2Ddesign/schoolofathens.jpg" alt = "Raphael's School of Athens"> </image>
       <br>[Week 2: 2D Design](./02_2Ddesign/index.html)
     </div>
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./03_fabrication/week3-placeholder-image.jpg" alt = "week 3 placeholder"> </image>
+      <image style = "width: 75%"src = "./03_fabrication/monet.jpg" alt = "Monet's Impression at Dawn"> </image>
       <br>[Week 3: Fabrication](./03_fabrication/index.html)
     </div>
   </div>
   <div class="row">
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./04_microcontroller/week4-placeholder-image.jpg" alt = "week 4 placeholder"> </image> 
+      <image style = "width: 75%"src = "./04_microcontroller/saintgirolamo.jpg" alt = "week 4 placeholder"> </image> 
       <br>[Week 4: Programming](./04_microcontroller/index.html)
     </div>
     <div class="col-sm-4">
