--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="./style.css" rel="stylesheet">
 
-<nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #dcdcdc; color: #EEE7E8;">
+<nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #ebccb2; color: #ebccb2;">
   <div style="align-items: center; justify-content: center;" class="container-fluid">
     <div class="flexrow">
-      <h2 class="nav-title">PS70 Fall 2025</h2>
+      <h2 class="nav-title">Fatma's PS70 Documentation</h2>
     </div>
     <div class="navbar-nav">
       <h4><a class="nav-link" href="./index.html">Home</a></h4>
