--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   
   <div class="row">
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./01_intro/starrynight.jpg" alt = "Van Gogh's Starry Night"> </image>
+      <image style = "height: 60%" "width: 75%"src = "./01_intro/starrynight.jpg" alt = "Van Gogh's Starry Night"> </image>
       <br>[Week 1: Intro](./01_intro/index.html)
     </div>
     <div class="col-sm-4">
