--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="./style.css" rel="stylesheet">
 
-<nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #ebccb2; color: #ebccb2;">
+<nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #FA8D39; color: #ebccb2;">
   <div style="align-items: center; justify-content: center;" class="container-fluid">
     <div class="flexrow">
       <h2 class="nav-title">Fatma's PS70 Documentation</h2>
@@ -26,7 +26,7 @@
   
   <div class="row">
     <div class="col-sm-4">
-      <image style = "height: 75%" "width: 75%"src = "./01_intro/starrynight.jpg" alt = "Van Gogh's Starry Night"> </image>
+      <image style = "width: 75%"src = "./01_intro/starrynight.jpg" alt = "Van Gogh's Starry Night"> </image>
       <br>[Week 1: Intro](./01_intro/index.html)
     </div>
     <div class="col-sm-4">
