--- a/index.html
+++ b/index.html
@@ -26,53 +26,53 @@
   
   <div class="row">
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./01_intro/week1photo.png" alt = "Van Gogh's Starry Night"> </image>
+      <image style = "width: 75%"src = "./01_intro/week1photo.png" alt = "week1photo"> </image>
       <br>[Week 1: Intro](./01_intro/index.html)
     </div>
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./02_2Ddesign/week2photo.png" alt = "Raphael's School of Athens"> </image>
+      <image style = "width: 75%"src = "./02_2Ddesign/week2photo.png" alt = "photo2"> </image>
       <br>[Week 2: 2D Design](./02_2Ddesign/index.html)
     </div>
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./03_fabrication/week3photo.png" alt = "Monet's Impression at Dawn"> </image>
+      <image style = "width: 75%"src = "./03_fabrication/week3photo.png" alt = "photo3"> </image>
       <br>[Week 3: Fabrication](./03_fabrication/index.html)
     </div>
   </div>
   <div class="row">
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./04_microcontroller/week4photo.png" alt = "week 4 placeholder"> </image> 
+      <image style = "width: 75%"src = "./04_microcontroller/week4photo.png" alt = "photo4"> </image> 
       <br>[Week 4: Programming](./04_microcontroller/index.html)
     </div>
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./05_3Ddesign/week5photo.png" alt = "week 5 placeholder"> </image>
+      <image style = "width: 75%"src = "./05_3Ddesign/week5photo.png" alt = "photo5"> </image>
       <br>[Week 5: 3D Design](./05_3Ddesign/index.html)
     </div>
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./06_inputs/week6photo.png" alt = "week 6 placeholder"> </image>
+      <image style = "width: 75%"src = "./06_inputs/week6photo.png" alt = "photo6"> </image>
       <br>[Week 6: Inputs](./06_inputs/index.html)
     </div>
   </div>
   <div class="row">
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./07_outputs/week7photo.png" alt = "week 7 placeholder"> </image>
+      <image style = "width: 75%"src = "./07_outputs/week7photo.png" alt = "photo7"> </image>
       <br>[Week 7: Outputs](./07_outputs/index.html)
     </div>
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./08_cnc/week8photo.png" alt = "week 8 placeholder"> </image>
+      <image style = "width: 75%"src = "./08_cnc/week8photo.png" alt = "photo8"> </image>
       <br>[Week 8: CNC](./08_cnc/index.html)
     </div>
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./09_networking/week9photo.png" alt = "week 9 placeholder"> </image>
+      <image style = "width: 75%"src = "./09_networking/week9photo.png" alt = "photo9"> </image>
       <br>[Week 9: Networking](./09_networking/index.html)
     </div>
   </div>
   <div class="row">
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./10_machine/week10photo.png" alt = "machine building placeholder"> </image>
+      <image style = "width: 75%"src = "./10_machine/week10photo.png" alt = "photo10"> </image>
       <br>[Machine Building](./10_machine/index.html)
     </div>
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./13_finalproject/finalprojectphoto.png" alt = "final project placeholder"> </image> 
+      <image style = "width: 75%"src = "./13_finalproject/finalprojectphoto.png" alt = "finalprojectphoto"> </image> 
       <br>[Final Project](./13_finalproject/index.html)
     </div>
   </div>
