--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 <link href="./style.css" rel="stylesheet">
 
 
-<nav class="navbar navbar-expand-sm navbar-dark" style=" color: #bc9cb0;">
+<nav class="navbar navbar-expand-sm navbar-dark" style=background-color: #bc9cb0; color: #bc9cb0;">
   <div style="align-items: center; justify-content: center;" class="container-fluid">
     <div class="flexrow">
       <h2 class="nav-title">Fatma's PS70 Documentation</h2>
