--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #bc9cb0; color: #606d5d;">
   <div style="align-items: center; justify-content: center;" class="container-fluid">
     <div class="flexrow">
-      <h2 class="nav-title">Fatma's PS70 Documentation</h2>
+      <h2 class="nav-title" style="background-color: #bc9cb0; >Fatma's PS70 Documentation</h2>
     </div>
     <div class="navbar-nav">
       <h4><a class="nav-link" href="./index.html">Home</a></h4>
@@ -69,7 +69,7 @@
   <div class="row">
     <div class="col-sm-4">
       <image style = "width: 75%"src = "./10_machine/week10photo.png" alt = "photo10"> </image>
-      <br>[Machine Building](./10_machine/index.html)
+      <br>[Week 10: Machine Building](./10_machine/index.html)
     </div>
     <div class="col-sm-4">
       <image style = "width: 75%"src = "./13_finalproject/finalprojectphoto.png" alt = "finalprojectphoto"> </image> 
