--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="./style.css" rel="stylesheet">
 
-<nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #bc9cb0; color: #606d5d;">
+<nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #bc9cb0; color: #bc9cb0;">
   <div style="align-items: center; justify-content: center;" class="container-fluid">
     <div class="flexrow">
       <h2 class="nav-title" style="background-color: #bc9cb0; color: #606d5d; ">Fatma's PS70 Documentation</h2>
