--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div class="row">
     <div class="col-sm-4">
       <image style = "width: 75%"src = "./01_intro/week1photo.png" alt = "week1photo"> </image>
-      <br> <style="background-color: #bc9cb0; color: #bc9cb0;"> Week 1: Intro (./01_intro/index.html) 
+      <br> <"color= #bc9cb0;"> Week 1: Intro (./01_intro/index.html) 
     </div>
     <div class="col-sm-4">
       <image style = "width: 75%"src = "./02_2Ddesign/week2photo.png" alt = "photo2"> </image>
