--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
 
-<xmp style="background-color: #bc9cb0; color: #606d5d; ">
+<xmp style="background-color: #88958D; color: #bc9cb0; ">
 
 <div class="container-fluid bg-3 text-center">
   
