--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 
 <body>
 
-<xmp style="background-color: #88958D; color: #bc9cb0; ">
+<xmp style="display:none;">
 
-<div class="container-fluid bg-3 text-center">
+<div class="container-fluid bg-3 text-center"> style="background-color: #88958D; color: #bc9cb0; ">
   
   <div class="row">
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./01_intro/week1photo.png" alt = "week1photo"> </image>0
-      <br> [Week 1: Intro](./01_intro/index.html)
+      <image style = "width: 75%"src = "./01_intro/week1photo.png" alt = "week1photo"> </image>
+      <br> [Week 1: Intro](./01_intro/index.html 
     </div>
     <div class="col-sm-4">
       <image style = "width: 75%"src = "./02_2Ddesign/week2photo.png" alt = "photo2"> </image>
