--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
 <div class="container-fluid bg-3 text-center"> 
   
-  <div class="row"> style="background-color: #88958D; color: #bc9cb0;">
-    <div class="col-sm-4">
+  <div class="row"> 
+    <div class="col-sm-4"> style="background-color: #88958D; color: #bc9cb0; ">
       <image style = "width: 75%"src = "./01_intro/week1photo.png" alt = "week1photo"> </image>
       <br> [Week 1: Intro](./01_intro/index.html 
     </div>
