--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 <div class="container-fluid bg-3 text-center"> 
   
   <div class="row"> 
-    <div class="col-sm-4"> style="background-color: #88958D; color: #bc9cb0; ">
+    <div class="col-sm-4"> 
       <image style = "width: 75%"src = "./01_intro/week1photo.png" alt = "week1photo"> </image>
-      <br> [Week 1: Intro](./01_intro/index.html 
+      <br style="color: #bc9cb0"> [Week 1: Intro](./01_intro/index.html 
     </div>
     <div class="col-sm-4">
       <image style = "width: 75%"src = "./02_2Ddesign/week2photo.png" alt = "photo2"> </image>
