--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   
   <div class="row"> 
     <div class="col-sm-4"> 
-      <image style = "width: 75%"src = "./01_intro/week1photo.png" alt = "week1photo"> </image>
-      <br style="color: #606D5D"> [Week 1: Intro](./01_intro/index.html 
+      <image style = "width: 75%"src = "./01_intro/week1photo.png" alt = "week1photo"> .</image>.
+      <br> [Week 1: Intro]<link style="color: #606D5D">(./01_intro/index.html 
     </div>
     <div class="col-sm-4">
       <image style = "width: 75%"src = "./02_2Ddesign/week2photo.png" alt = "photo2"> </image>
