put project ideas

--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -9,7 +9,7 @@
 <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #bc9cb0; color: #EEE7E8;">
   <div style="align-items: center; justify-content: center;" class="container-fluid">
     <div class="flexrow">
-      <h2 class="nav-title" style="background-color: #bc9cb0; color: #606d5d; ">Week 1: Intro</h2>
+      <h2 class="nav-title" style="background-color: #bc9cb0; color: #4C5F49; ">Week 1: Intro</h2>
     </div>
     <div class="navbar-nav">
       <h4><a class="nav-link" href="../index.html">Home</a></h4>
@@ -21,33 +21,30 @@
 <body>
 <xmp style="display:none;">
 <div class="textcontainer">
-<br></br>
-
-<h3>Week 1: Final Project Proposal</h3>
 
 <p class = "margin"></p>
-Here are at most 3 ideas for my final project
+Hello! Welcome to my first ever attempt at documentation through code as well as my first attempt at anything engineering-build related. For most of highschool I firmly thought I was going to end up at art school, yet somehow I ended up here: trying 50+ different configurations to figure out how to simply change the color of a linked text :'( Nonetheless, I am in high anticipation for this class and what's to come, and I can't wait to learn a number of creative and technical skills and widen my tool belt! 
 <p class = "margin"></p>
 
-<h4>Idea 1 : [INSERT IDEA 1]</h4>
+<h4>**IPHONE DETECTOR**</h4>
 <p class = "margin"></p>
 
-Idea 1 description
+Similar to a speed radar on an undercover cop car on the highway, this iphone detector would act as a radar and detect the specific waves emitted from especially iphones in use. For now, I want to keep it to just iphones because I'm not sure of my ability integrate dual detection for the two types of waves emitted from iphone and android, but if I figure it out then I will definetely integrate that. This detector could be used to weed out phones in a phone-free area, whether that be the classroom, changing room, phone-free wedding, or even just an intimate conversation between you and your toxic ex and you want to make sure they're not secretly voice recording you. The detector would be about the same size as a power bank, encased in a round-edged rectangular prism made of laser-cut plywood(so it doesn't look ugly duh). In it will be some sort of RF detector that when it detects certain ranges of frequency levels at certain periods and intervals, it will light up from within. 
 
 <p class = "margin"></p>
 
 
-<h4>Idea 2: [INSERT IDEA 2]</h4>
+<h4>**CURSE PREVENTING BRACELET**</h4>
 <p class = "margin"></p>
 
-Idea 2 Description
+This was somewhat inspired by Lord of the Rings but along the way it became the complete opposite of what the ring causes. Rather than deteriorate the wearer's moral compass, this bracelet is meant to prevent the usage of profanity by the wearer. It'll be donned like a normal piece of jewellery, perhaps more on the apple-watch look of things, and using audio detection of prescribed curse words (it'll get familiar with most different types of accents and voices and pitches as long as the word itself is recognizable), it will begin to shrink in size and compress into the wrist for about 5 seconds to elicit sharp but brief pain and teach them a lesson to stop cursing. As someone who curses occasionally but really wants to use alternative words that aren't profane or insulting, this is exactly what I need. And what some certain people I know especially need... Within the small tablet on the bracelet, the audio detector will lie on top of a tiny motor attached to one belt running around the whole of the wrist. When curse words are detected, the detector (with code probably) will signal to the motor to begin spinning and this pull both ends of the belt closer to eachother, tightening the bracelet on the wrist. 
 
 <p class = "margin"></p>
 
-<h4>Idea 3: [INSERT IDEA 3]</h4>
+<h4>**GUARANTEED CIRCLE ARTIST'S GLOVE**</h4>
 <p class = "margin"></p>
 
-Idea 3 Description
+As a traditional artist, I can do many things, like sketch from life, rerender a master study, oil paint on a 3'x4' canvas, etc. But one thing I and many artists find ourselves unable to do is drawing a simple, proportionate circle. Many times, our circles turn out to be ovals or have disconnected starting and ending points, or vary in pressure halfway through, resulting in an opaque semi-circle. Maybe after 10 tries we'll get the perfect one. Getting an accurate and proportionate circle is quite important when it comes to drawing anatomy and facial features, so having an artist glove that will do it for you is innovative and a time saver. How I envision it'll work is that the cloth glove (or perhaps a mold cast created exclusively for the wearer) will extend from mid-thumb, -index, and  -middle finger, all the way down to about 2 inches below the wrist. There will be a microcontroller programmer attached to the top of the wrist, coded with different circle sizes. The wearer can choose whichever option they want, and then the program will send a signal to a sort of motor or rotating mini device that will follow along the circumference of the circle. Before it draws the circle, once the option is clicked and ready to go, the wearer must pick up their drawing utensil, fix their fingers, hand, and wrist in the desired position, and once satisifed with the position, the wearer will press a button or controller that will lock the glove in this position so the wrist does not wobble or fingers slip. How to do that, I was thinking on each joint there will be little snaps in place that will be snapped shut through wires upon the button being pressed. On the finger parts will be placed rubber soles for extra adhesiveness the drawing utensil.  
 
 
 
