--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #bc9cb0; color: #bc9cb0;">
   <div style="align-items: center; justify-content: center;" class="container-fluid">
     <div class="flexrow">
-      <h2 class="nav-title" style="background-color: #bc9cb0; color: #606d5d; ">Fatma's PS70 Documentation</h2>
+      <h2 class="nav-title" style="background-color: #bc9cb0; color: #4C5F49; ">Fatma's PS70 Documentation</h2>
     </div>
     <div class="navbar-nav">
-      <h4><a class="nav-link" href="./index.html">Home</a></h4>
-      <h4><a class="nav-link" href="./about.html">About</a></h4>
-      <h4><a class="nav-link" href="./13_finalproject/index.html">Final Project</a></h4>
+      <h4><a class="nav-link" style="color: #4C5F49;" href="./index.html">Home</a></h4>
+      <h4><a class="nav-link" style="color: #4C5F49;" href="./about.html">About</a></h4>
+      <h4><a class="nav-link" style="color: #4C5F49;" href="./13_finalproject/index.html">Final Project</a></h4>
     </div>
   </div>
 </nav>
@@ -27,7 +27,7 @@
   <div class="row"> 
     <div class="col-sm-4"> 
       <image style = "width: 75%"src = "./01_intro/week1photo.png" alt = "week1photo"> .</image>
-      <br>[Week 1: Intro](./01_intro/index.html) 
+      <br> [Week 1: Intro](./01_intro/index.html) 
     </div>
     <div class="col-sm-4">
       <image style = "width: 75%"src = "./02_2Ddesign/week2photo.png" alt = "photo2"> </image>
