--- a/about.html
+++ b/about.html
@@ -28,25 +28,15 @@
 
 <p class="margin">   </p>
 <div class="center-row">
-  <img src="./about-me-placeholder.jpg" alt="placeholder for you about me image">
   <p id="aboutme">
-    This is an about me! Here you can talking about the dorm you live in, what year you are, and what are you interested in.
+    Hey, I'm a first year living in Wigglesworth and I'm currently undecided but considering concentrating in Mechanical Engineering or Government and Economics. In my free time I like making art, reading, watching movies and shows, and just hanging out with friends. I'm from Clifton, NJ (born in Brookly, NY), and my parents are from Egypt. 
   </p>
 </div>
 <br></br>
 
-Hello there is more text here, feel free to go into more detail about stuff you are interested in as well. As well as place more
-images if you are interested in those things
-<br></br>
-<img src="./generic-placeholder-image.jpg" alt="generic placeholder image">
 
 <br></br>
-Maybe even add a video?
-<br></br>
 
-<video width="640" height="480" controls>
-  <source src="temp-video.mp4" type="video/mp4">
-</video>
 
 
 </div>
