--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 <p class="margin">   </p>
 <div class="center-row">
   <p id="aboutme">
-    Hey, I'm a first year living in Wigglesworth and I'm currently undecided but considering concentrating in Mechanical Engineering or Government and Economics. In my free time I like making art, reading, watching movies and shows, and just hanging out with friends. I'm from Clifton, NJ (born in Brookly, NY), and my parents are from Egypt. 
+    Hey, I'm a first year living in Wigglesworth and I'm currently undecided but considering concentrating in Mechanical Engineering or Government and Economics. In my free time I like making art, reading, watching movies and shows, and just hanging out with friends. I'm from Clifton, NJ (born in Brookly, NY), and my parents are from Egypt. I can speak Arabic fluently and I'm hoping to get a citation in Turkish. 
   </p>
 </div>
 <br></br>
