added sketch photos

--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -26,13 +26,22 @@
 Hello! Welcome to my first ever attempt at documentation through code as well as my first attempt at anything engineering-build related. For most of highschool I firmly thought I was going to end up at art school, yet somehow I ended up here: trying 50+ different configurations to figure out how to simply change the color of a linked text :'( Nonetheless, I am in high anticipation for this class and what's to come, and I can't wait to learn a number of creative and technical skills and widen my tool belt! 
 <p class = "margin"></p>
 
-<h4>**IPHONE DETECTOR**</h4>
 <p class = "margin"></p>
+<div class="center">
+  <image style = "width: 75%"src = "iphone_detector.JPG" alt = "iphone detector"> </image>
+<p class = "margin"></p>
+<h4>**IPHONE DETECTOR**</h4>
+
+
 
 Similar to a speed radar on an undercover cop car on the highway, this iphone detector would act as a radar and detect the specific waves emitted from especially iphones in use. For now, I want to keep it to just iphones because I'm not sure of my ability integrate dual detection for the two types of waves emitted from iphone and android, but if I figure it out then I will definetely integrate that. This detector could be used to weed out phones in a phone-free area, whether that be the classroom, changing room, phone-free wedding, or even just an intimate conversation between you and your toxic ex and you want to make sure they're not secretly voice recording you. The detector would be about the same size as a power bank, encased in a round-edged rectangular prism made of laser-cut plywood(so it doesn't look ugly duh). In it will be some sort of RF detector that when it detects certain ranges of frequency levels at certain periods and intervals, it will light up from within. 
 
 <p class = "margin"></p>
+<div class="center">
+  <image style = "width: 50%"src = "curse bracelet.JPG" alt = "curse bracelet">  </image> 
+  <image style = "width: 50%"src = "bracelet strap.JPG" alt = "curse bracelet"> </image>
 
+<p class = "margin"></p>
 
 <h4>**CURSE PREVENTING BRACELET**</h4>
 <p class = "margin"></p>
@@ -40,7 +49,9 @@ Similar to a speed radar on an undercover cop car on the highway, this iphone de
 This was somewhat inspired by Lord of the Rings but along the way it became the complete opposite of what the ring causes. Rather than deteriorate the wearer's moral compass, this bracelet is meant to prevent the usage of profanity by the wearer. It'll be donned like a normal piece of jewellery, perhaps more on the apple-watch look of things, and using audio detection of prescribed curse words (it'll get familiar with most different types of accents and voices and pitches as long as the word itself is recognizable), it will begin to shrink in size and compress into the wrist for about 5 seconds to elicit sharp but brief pain and teach them a lesson to stop cursing. As someone who curses occasionally but really wants to use alternative words that aren't profane or insulting, this is exactly what I need. And what some certain people I know especially need... Within the small tablet on the bracelet, the audio detector will lie on top of a tiny motor attached to one belt running around the whole of the wrist. When curse words are detected, the detector (with code probably) will signal to the motor to begin spinning and this pull both ends of the belt closer to eachother, tightening the bracelet on the wrist. 
 
 <p class = "margin"></p>
-
+<div class="center">
+  <image style = "width: 75%"src = "artists glove.JPG" alt = "artists glove"> </image>
+<p class = "margin"></p>
 <h4>**GUARANTEED CIRCLE ARTIST'S GLOVE**</h4>
 <p class = "margin"></p>
 
