uploaded documentation for week 2 plus updated some about me info

--- a/02_2Ddesign/index.html
+++ b/02_2Ddesign/index.html
@@ -23,28 +23,67 @@
 <div class="textcontainer">
 <p class="margin">   </p>
 
-<h3>Week 2: 2D Design & Cutting</h3>
+
+<h4>**Assignment 1: MAKE A FINGER-JOINT BOX**</h4>
+<p class = "margin"></p>
+
+
+The first design iteration of this finger-joint box is this screenshot below(courtesy of the tutorial), and I'm sincerely hoping that it'll cut and fit together perfectly tomorrow when I lasercut it for the first time. 
+
+<p class = "margin"></p>
+<image style = "width: 75%"src = "jointbox1.png" alt = "first joint box design"> </image>
+<p class = "margin"></p>
+
+Update: It worked perfectly  but it was smaller than I realized it would be, so I had to redraw it in Fusion again with bigger parameters so the box could actually hold my stuff. I kmow the pictures in Fusion don't show my name or the finger holes(which were extremely small of course) but that's because when I go to Rhino I only decided i wanted to engrave them and i didn't want to go back to the Fusion file and export again as I was on a time crunch today. The second time around, I will admit I got a bit lazy with the Fusion file and I had multiple duplicate lines, so when the laser was cutting, it went over the score lines multiple times until they cut through. Also I forgot to check the Z height of the laser and I believe thats why the engraving was practically burnt through and so the edges that were supposed to bend just fell off so i had to glue everything together. Additionally, I personally tend to hold things with three fingers so i thought three overlapping circles for handles would be fine but it was not ideal as I forgot to account the fact that my pinky was curled up against the cardboard uncomfortably. But that's okay, its a learning experience :) The third time aroud I got everything right: the parameters, z-height, engraving, and handles which i turned into 4 overlapping circles. I'm very happy with the result and I expect to play aroudn with more designs and engravings in the future. 
+
+<p class = "margin"></p>
+<image style = "width: 75%"src = "jointboxtry1.jpeg" alt = "first lasercut of the box"> </image>
+<p class = "margin"></p>
+<image style = "width: 75%"src = "jointbox2.png" alt = "second joint box design"> </image>
+<p class = "margin"></p>
+<image style = "width: 75%"src = "jointboxtry2.jpeg" alt = "second lasercut of the box"> </image>
+<p class = "margin"></p>
+<image style = "width: 75%"src = "jointboxtry3.jpeg" alt = "third lasercut of the box"> </image>
+<p class = "margin"></p>
+<p class = "margin"></p>
+
+<h4>**Assignment 2: FUSION 360 TUTORIAL**</h4>
+
+So I did follow along with the first Fusion 360 tutorial linked in the course website bit I soon got bored so I moved onto actual 3D modeling. I followed a step by step video tutorial on a bottle cap by the Youtube channel Fusion Fundamentals who referenced this <a href="Bottle cap drawing.pdf" >drawing</a> (I unfortunetely need Youtube Premmium to download a video) and I think I did pretty good. Can confidently say I am a lot more familiar with certain actions and commands like extrude, patterns, shell, thread, appearance, chamfer, and fillet. I'm surprisingly having a lot of fun 3d modeling now. 
+
+<p class = "margin"></p>
+<image style = "width: 75%"src = "tutorial bottlecap 1.png" alt = "photo1 of bottlecap"> </image>
+<p class = "margin"></p>
+<p class = "margin"></p>
+<image style = "width: 75%"src = "tutorial bottlecap 2.png" alt = "photo2 of bottlecap"> </image>
 
 <p class="margin">   </p>
 <div class="flexrow">
-  <a id="btn" href="./temp.zip" download>Test Download Button
+  <a id="btn" href="./bottlecap tutorial.f3d" download>Bottlecap Fusion File
   </a>
 </div>
 <p class="margin">   </p>
 
-<h4>Assignment 1: Make a Box</h4>
 
+<h4>**Assignment 3: FUSION MODELING**</h4>
 
+I got stuck on the "assembly" part of this assignment, so I decided to model both the cap and the body of my dewy tint product, that way it's two modeled objects that could be assembled together. That said, I've only so far done the cap, oops. I took measurements with a small caliper and got into all the nitty gritty details and did my best to reflect them in Fusion. I did a solid job except for the thread part- since I only had the thread options already given, I had to go with the closest looking one, which is ACME Screw Threads. I know the cap has 3 rows of thread whos edges converge to a sharp thread point, but alas I could not figure out how to accurately present that. But I believe I should still be able to theoretically print out and assemble both parts if I use the same thread settings on the body of the tint. 
 
-<h4>Assignment 2: Fusion 360 Tutorial</h4>
+<p class = "margin"></p>
+<image style = "width: 75%"src = "lipstickcap1a.png" alt = "lipstick cap design view 1"> </image>
+<p class = "margin"></p>
+<image style = "width: 75%"src = "lipstickcap1b.jpeg" alt = "photo of lipstick cap view 1"> </image>
+<p class = "margin"></p>
+<image style = "width: 75%"src = "lipstickcap2a.png" alt = "lipstick cap design view 2"> </image>
+<p class = "margin"></p>
+<image style = "width: 75%"src = "lipstickcap2b.jpeg" alt = "photo of lipstick cap view 2"> </image>
+<p class = "margin"></p>
+<image style = "width: 75%"src = "lipstickcap3a.png" alt = "lipstick cap design view 3"> </image>
+<p class = "margin"></p>
+<image style = "width: 75%"src = "lipstickcap3b.jpeg" alt = "photo of lipstick cap view 3"> </image>
+<p class = "margin"></p>
 
-
-<h4>Assignment 3: Fusion Modeling</h4>
-
-
-
-
-
+I promise I'll model the body soon :'(
 </div>
 </xmp>
 </body>
