--- a/about.html
+++ b/about.html
@@ -27,11 +27,21 @@
 <h3>About Me</h3>
 
 <p class="margin">   </p>
-<div class="center-row">
-      <image style = "width: 40%"src = "about me picture.jpg" alt = "Me and Gato"> .</image>
-<div class="center-row">
+      <image style = "width: 60%"src = "about me picture.jpg" alt = "Me and Gato"> .</image>
   <p id="aboutme">
-    Hey, I'm a first year living in Wigglesworth and I'm currently undecided but considering concentrating in Mechanical Engineering or Government and Economics. I'm from Clifton, NJ (born in Brookly, NY), and my parents are from Egypt. I can speak Arabic fluently and I'm hoping to get a citation in Turkish. In my free time I like making art, usually in paint and ink. I also am an avid reader, and my favorite genres are historical fiction and fantasy. My favorite movies are Meet Joe Black, The Money Pit, and One Day. If I'm listening to music then it's probably TOTO or Tears for Fears. I asked my friend how she would describe me and she said I'm like an avacado: hard on the outside but soft on the inside. 
+Hey, I'm a first year living in Wigglesworth and I'm currently undecided but considering concentrating in Mechanical Engineering or Government and Economics. I'm from Clifton, NJ (born in Brookly, NY), and my parents are from Egypt. I can speak Arabic fluently and I'm hoping to get a citation in Turkish. In my free time I like making art, usually in paint and ink. I also am an avid reader, and my favorite genres are historical fiction and fantasy. My favorite movies are Meet Joe Black, The Money Pit, and One Day. If I'm listening to music then it's probably TOTO or Tears for Fears. I asked my friend how she would describe me and she said I'm like an avacado: hard on the outside but soft on the inside. If I could solve one problem in the world, it would be poverty.
+
+Here are some photos of my art. Enjoy :)
+
+<p class = "margin"></p>
+<div class="center">
+  <image style = "width: 75%"src = "zbrush self portrait.jpg" alt = "self portrait in zbrush"> </image>
+<p class = "margin"></p>
+<image style = "width: 50%"src = "nefertiti zbrush master study.jpg" alt = "Nefertiti master study in zbrush"> </image>
+<p class = "margin"></p>
+<image style = "width: 50%"src = "anatomy.jpeg" alt = "self portrait in zbrush"> </image>
+<p class = "margin"></p>
+
   </p>
 </div>
 <br></br>
