added to about me

--- a/about.html
+++ b/about.html
@@ -41,6 +41,10 @@ Here are some photos of my art. Enjoy :)
 <p class = "margin"></p>
 <image style = "width: 50%"src = "anatomy.jpeg" alt = "self portrait in zbrush"> </image>
 <p class = "margin"></p>
+<image style = "width: 50%"src = "playingcards.JPG" alt = "handmade Japanese inspired playing cards"> </image>
+<p class = "margin"></p>
+<image style = "width: 50%"src = "annabellee.HEIC" alt = "oil painting inspired by Poe's poem Annabel Lee"> </image>
+<p class = "margin"></p>
 
   </p>
 </div>
