added  useless box

--- a/02_2Ddesign/index.html
+++ b/02_2Ddesign/index.html
@@ -84,9 +84,20 @@ I got stuck on the "assembly" part of this assignment, so I decided to model bot
 <p class = "margin"></p>
 
 I promise I'll model the body soon :'(
+
+<p class="margin">   </p>
+
+<h4>**Miscellaneous: USELESS BOX**</h4>
+
+Earlier in the week, Kassia walked us through making a useless box on Fusion during lab. While I haven't gotten the chance to print it out, here's a screenshot of my design in Fusion below.
+
+<p class = "margin"></p>
+<image style = "width: 75%"src = "uselessboxdesign.png" alt = "useless box design"> </image>
+
 </div>
 </xmp>
 </body>
+
 
 <script src="../strapdown.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" ></script>
