added kinetic sculpture stuff

--- a/02_2Ddesign/index.html
+++ b/02_2Ddesign/index.html
@@ -83,16 +83,22 @@ I got stuck on the "assembly" part of this assignment, so I decided to model bot
 <image style = "width: 75%"src = "lipstickcap3b.jpeg" alt = "photo of lipstick cap view 3"> </image>
 <p class = "margin"></p>
 
-I promise I'll model the body soon :'(
+Now here is the bottle of the dewy tint product. I had to figure out how to converge the top circle to the bottom thin rectangular prism at the end of the bottle with the loft action. However, the angle at which the shapes converge is too sharp so the line in the middle is apparent and unless I converge the shapes higher up, the line won't go away. I did not want to raise the converging point though because the appearance would vary too much from the real product. But Bobby said it was adequate enough. 
 
 <p class="margin">   </p>
+<image style = "width: 75%"src = "lipstickbottledesign.png" alt = "lipstick bottle design"> </image>
+<p class = "margin"></p>
+<image style = "width: 75%"src = "lipstickbottlephoto.jpeg" alt = "lipstick bottle photo"> </image>
+<p class = "margin"></p>
 
 <h4>**Miscellaneous: USELESS BOX**</h4>
 
-Earlier in the week, Kassia walked us through making a useless box on Fusion during lab. While I haven't gotten the chance to print it out, here's a screenshot of my design in Fusion below.
+Earlier in the week, Kassia walked us through making a useless box on Fusion during lab. While I haven't gotten the chance to print it out, here's a screenshot of my design in Fusion below. 
 
 <p class = "margin"></p>
 <image style = "width: 75%"src = "uselessboxdesign.png" alt = "useless box design"> </image>
+<p class = "margin"></p>
+<image style = "width: 75%"src = "uselessboxdesign2.png" alt = "useless box design"> </image>
 
 </div>
 </xmp>
