--- a/03_fabrication/index.html
+++ b/03_fabrication/index.html
@@ -29,6 +29,8 @@ This week we were charged with creating a kinetic sculpture. My original idea wa
 <p class = "margin"></p>
 However, as you scroll down, you will clearly see that I only carried out like 10% of my vision :( I fear my ambition exceeded my skills during this time. So I settled for a moving dragon. For now. 
 <p class = "margin"></p>
+<image style = "width: 75%"src = "firstkineticiteration.jpeg" alt = "first kinetic dragon iteration"> </image>
+<p class = "margin"></p>
 Since I had no idea how to make a kinetic sculpture, I decided to start by drawing the 4-pieced dragon free-hand in Fusion along with each part's stick as well as 4 cams with small holes near the edge of the circles, 4 small square panels, and 4 sides of the box. Each dragon part was glued to a stick which was then put through a lasercutted square hole in the top surface of the box, then at the end of each stick I glued a small square panel to provide a surface for the dragon to move along the cam on. Then I glued each cam onto the long cardboard rod at different positions in a wave motion, so that while one piece is at its lowest, another is at its apex. 
 <p class = "margin"></p>
 This first attempt was a fail as I completely expected it to be becuse I didn't bother to make any measuremnts at all; I just needed to see how each piece fit together (or didn't) and what would interact with what to make it move. 
@@ -36,23 +38,20 @@ This first attempt was a fail as I completely expected it to be becuse I didn't 
 So I made a list of what I needed to change in my next attempt: **1)** use a wooden rod for more stability **2)** space out the square holes foe each body part skewer so they arent jamming against eachother
 <p class = "margin"></p>
 (Realize there's more things that need fixing but at this moment in time because my first attempt was so incompetent, I coudln't see eveyrhting that needed fixing, hence why a third iteration was needed.)
-
-<p class = "margin"></p>
-<image style = "width: 75%"src = "firstkineticiteration.jpeg" alt = "first kinetic dragon iteration"> </image>
-<p class = "margin"></p>
 <p class = "margin"></p>
 <image style = "width: 75%"src = "secondkineticiteration.jpeg" alt = "second kinetic dragon iteration"> </image>
 <p class = "margin"></p>
-So I took all my listed improvements from the first one to create my second one and I still encountered issues. I amateruraly did not accurately measure the sides of the box and so the cams kept hitting the bottom of the box. The small panels at the end of each skewer worked only when the cam was rotating down but when it came back up, the panel kept getting pushed and stuck to the side of the cam and would not budge. Plus the skewers kept moving side to side and would never actually stay on the cam. Also the dragon pieces were not spaced far apart enough. I also needed to find a way to keep the rod fixed in place so the cams would always line up under the skewer panels.  
+So I took all my listed improvements from the first one to create my second one and I still encountered issues. I amateurly did not accurately measure the sides of the box and so the cams kept hitting the bottom of the box. The small panels at the end of each skewer worked only when the cam was rotating down but when it came back up, the panel kept getting pushed and stuck to the side of the cam and would not budge. Plus the skewers kept moving side to side and would never actually stay on the cam. Also the dragon pieces were not spaced far apart enough. I also needed to find a way to keep the rod fixed in place so the cams would always line up under the skewer panels.  
 <p class = "margin"></p>
-So based off this attempt, I made another list of things that needed fixing for my third and last iteration: **1)** Space out the dragon pieces(again) **2)** make the square panels at the end of each skewer longer and wider **3)** make the side surfaces of the box longer so the cams dont touch the box **4)** make  panel between the top of the box and the cams with the same width-spaced holes to put the skewers through **5)** create small circle parts to connect the wooden rod and the motor and get it spinning **6)** glue cardboard pieces on the other side of the box opposite to where the motor is attached **7)** make a sitting cardboard piece with a circle for the motor to sit on 
+Based off this attempt, I made another list of things that needed fixing for my third and last iteration: **1)** Space out the dragon pieces(again) **2)** make the square panels at the end of each skewer longer and wider **3)** make the side surfaces of the box longer so the cams dont touch the box **4)** make  panel between the top of the box and the cams with the same width-spaced holes to put the skewers through **5)** create small circle parts to connect the wooden rod and the motor and get it spinning **6)** glue cardboard pieces on the other side of the box opposite to where the motor is attached **7)** make a sitting cardboard piece with a circle for the motor to sit on 
 <p class = "margin"></p>
 <image style = "width: 75%"src = "thirdkineticiteration.jpeg" alt = "third kinetic dragon iteration"> </image>
 <p class = "margin"></p>
-
-<p class = "margin"></p>
 <video style = "width: 75%"src = "kineticdragonvideo.mp4" alt = "Kinetic Cardboard Dragon Video" controls> </video>
 <p class = "margin"></p>
+Voila! It works. While I couldn't do my entire vision, this project was still extremely gratifying through all the designing and fixing and tweaking. 
+<p class = "margin"></p>
+Some things I was to improve for the next time: **1)** bring the dragon head closer to the body **2)** put popsicle sticks under the box top on either side of the skewer holes rather than the small cardboard pieces on top///I might actually try square instead of circle holes because I feel like that would achieve the same result in a better looking way **3)** instead of smooth cams, maybe I'll try gears. I'll replace the skewer panels with gears that can rotate on the cam so its smoother and more of a guarantee that the skewer will stay on the cam. **4)** add wings **5)** make it out of wood
 
 <p class="margin">   </p>
 <div class="flexrow">
