--- a/03_fabrication/index.html
+++ b/03_fabrication/index.html
@@ -51,7 +51,7 @@ Based off this attempt, I made another list of things that needed fixing for my 
 <p class = "margin"></p>
 Voila! It works. While I couldn't do my entire vision, this project was still extremely gratifying through all the designing and fixing and tweaking. 
 <p class = "margin"></p>
-Some things I was to improve for the next time: **1)** bring the dragon head closer to the body **2)** put popsicle sticks under the box top on either side of the skewer holes rather than the small cardboard pieces on top///I might actually try square instead of circle holes because I feel like that would achieve the same result in a better looking way **3)** instead of smooth cams, maybe I'll try gears. I'll replace the skewer panels with gears that can rotate on the cam so its smoother and more of a guarantee that the skewer will stay on the cam. **4)** add wings **5)** make it out of wood
+Some things I want to improve for the next time: **1)** bring the dragon head closer to the body so it'll actually look like a dragon **2)** put popsicle sticks under the box top on either side of the skewer holes rather than the small cardboard pieces on top///I might actually try square instead of circle holes because I feel like that would achieve the same result in a better looking way **3)** instead of smooth cams, maybe I'll try gears. I'll replace the skewer panels with gears that can rotate on the cam so its smoother and more of a guarantee that the skewer will stay on the cam. **4)** add wings **5)** make it out of wood
 
 <p class="margin">   </p>
 <div class="flexrow">
