put dragon files

--- a/03_fabrication/index.html
+++ b/03_fabrication/index.html
@@ -55,7 +55,7 @@ Some things I want to improve for the next time: **1)** bring the dragon head cl
 
 <p class="margin">   </p>
 <div class="flexrow">
-  <a id="btn" href="./finaldragoncardboardfiles.dxf" download>Final Kinetic Cardboard Dragon Fusion File
+  <a id="btn" href="./kineticdragoncardboard.f3d" download>Final Kinetic Cardboard Dragon Fusion File
   </a>
 </div>
 <p class="margin">   </p>
